Complete css friends phase 6

--- a/css-friends-06/skeleton/06-sidebar.html
+++ b/css-friends-06/skeleton/06-sidebar.html
@@ -54,10 +54,18 @@
       </section>
       <section class="profile-nav">
         <ul class="profile-nav-list">
-          <li>Wall</li>
-          <li>About</li>
-          <li>Friends</li>
-          <li>Photos</li>
+          <li>
+            <a href="#">Wall</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Friends</a>
+          </li>
+          <li>
+            <a href="#">Photos</a>
+          </li>
         </ul>
 
       </section>
