--- a/w6d5/widgets/index.html
+++ b/w6d5/widgets/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Widgets</title>
-    <script type="text/javascript" src="bundle.js">
-
-    </script>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <script type="text/javascript" src="bundle.js"></script>
   </head>
   <body>
     <div id="root">
